Fixed Findbugs warnings